# AEDS2_Mecanismo_Busca

./: CMakeLists.txt  README.md
Patricia_Letras/: CMakeLists.txt  auxprocedures.c  main.c  patricia.c  patricia.h
Patricia_Palavras/: CMakeLists.txt  arquivo0.txt  arquivo1.txt  auxprocedures.h  copy2.txt  dados.h  listaencadeada.c  listaencadeada.h  main.c  patricia.c  patricia.h  relevancia.c  relevancia.h  saida.txt
TST/: TAD TST.layout  main.c
